samples/_failures_safe/1761320352_644305_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcf54bcb.c: In function ‘print_token’:
./samples/SAFE/__tmp_bcf54bcb.c:167:5: error: expected expression at end of input
  167 |     if (token.type !=
      |     ^~
./samples/SAFE/__tmp_bcf54bcb.c:167:5: error: expected declaration or statement at end of input
